<resources>
    <string name="app_name">OfficeMemo</string>
    <string name="post_to">Post to:</string>
    <string name="your_title">Your title</string>
    <string name="content_goes_here">Content goes here</string>
    <string name="post">POST</string>
    <string name="check_your_values">Check your values</string>
    <string name="empty_content">Content can\'t be empty</string>
    <string name="empty_title">Tile can\'t be empty</string>
    <string name="not_found">Nothing was found</string>
    <string name="empty_fname">Name required</string>
    <string name="empty_lname">Name required</string>
    <string name="empty_about">Description required</string>
    <string name="empty_email">Email required</string>
    <string name="about_department">About department</string>
    <string name="department_location">Department location</string>
    <string name="department_short_name">Department short name</string>
    <string name="department_name">Department name</string>
    <string name="create">CREATE</string>
    <string name="profile_picture">Profile picture:</string>
    <string name="cover_picture">Cover picture:</string>
    <string name="pick_image">Pick image</string>
    <string name="pick_location">Pick location</string>
    <string name="auto_tag_image">Auto tag image</string>
    <string name="pick_a_profile_picture">Pick a profile picture</string>
    <string name="pick_cover_picture">Pick a cover picture</string>
    <string name="about_user_input">About</string>
    <string name="email_user_input">Contact email</string>
    <string name="save">SAVE</string>
    <string name="location">Location</string>
    <string name="empty_location">Location required</string>
    <string name="removed_image">Image was removed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_image">Profile image</string>
    <string name="cover_image">Cover image</string>
    <string name="me">Me</string>
    <string name="newpost">New Post</string>
    <string name="newdept">New Department</string>
</resources>
