<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ruazosa.hr.fer.officememo.View.NewDepartmentActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHint="@color/accent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextShortNameDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department_short_name"
                    android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:textColorHint="@color/accent"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextNameDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
                    android:hint="@string/department_name"

                    android:textColorHint="@color/accent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                android:textColorHint="@color/accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextAboutDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/about_department"
                    android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
                    android:textColorHint="@color/accent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:errorEnabled="true"
                android:textColorHint="@color/accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextLocationDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department_location"
                    android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
                     />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:text="@string/profile_picture"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewProfileDepartment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageViewProfileDepartment"
                tools:text="Profile picture" />

            <ImageView
                android:id="@+id/imageViewProfileDepartment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/gallery"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

            <ImageView
                android:id="@+id/imageViewCoverDepartment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProfileDepartment"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/gallery" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/cover_picture"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewCoverDepartment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageViewCoverDepartment"
                tools:text="Cover picture" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="#eceff1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageViewProfilePickerDepartment"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/pick_a_profile_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_portrait_blue_grey_600_36dp" />

        <ImageView
            android:id="@+id/imageViewCoverPickerDepartment"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/pick_cover_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewProfilePickerDepartment"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_panorama_blue_grey_600_36dp" />

        <Button
            android:id="@+id/buttonCreateDepartment"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/create"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
