<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ruazosa.hr.fer.officememo.View.LoginAdditionalActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:id="@+id/textInputLayout2">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextUserFName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:errorEnabled="true"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextUserLName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last Name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="99dp"
                android:textColorHint="@color/colorPrimary"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout4"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextUserAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:maxLines="2"
                    android:hint="@string/about_user_input" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextUserLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout6"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_user_input"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_picture"
                tools:text="Profile picture"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintTop_toTopOf="@+id/imageViewProfileUser"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewProfileUser"
                android:layout_marginBottom="0dp" />

            <ImageView
                android:id="@+id/imageViewProfileUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/gallery"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

            <ImageView
                android:id="@+id/imageViewCoverUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/imageViewProfileUser"
                app:srcCompat="@drawable/gallery" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/cover_picture"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Cover picture"
                app:layout_constraintTop_toTopOf="@+id/imageViewCoverUser"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewCoverUser"
                android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="#eceff1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageViewProfileUserPicker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/pick_a_profile_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_portrait_blue_grey_600_36dp" />

        <ImageView
            android:id="@+id/imageViewCoverUserPicker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/pick_location"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewProfileUserPicker"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_panorama_blue_grey_600_36dp" />

        <ImageView
            android:id="@+id/imageViewBirthUserPicker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/pick_location"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewCoverUserPicker"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_date_range_blue_grey_600_36dp" />

        <Button
            android:id="@+id/buttonCreateUser"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
